fix bug that was making annotation panel search icon too small

--- a/src/css/annotation.css
+++ b/src/css/annotation.css
@@ -32,7 +32,7 @@ header.annotation-header {
 .annotation-header-search {
   vertical-align: 10%;
   text-decoration: none; /* tweaks needed for wp */
-  font-size: 60%; /* tweaks needed for wp */
+  /*font-size: 60%;  tweaks needed for wp */
 }
 
 .annotation-header-search:hover {
